<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin">

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:weightSum="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/date_metric"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_black"
                    android:textSize="@dimen/date"/>

                <TextView
                    android:id="@+id/all_count_walk"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="@dimen/margin_right"
                    android:textColor="@color/grey_black"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/all_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_right"
                    android:textSize="@dimen/all_text"
                    android:textColor="@color/grey_black"
                    android:text="@string/splash"/>


                <TextView
                    android:id="@+id/all_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_right"
                    android:textColor="@color/grey_black"
                    android:textSize="@dimen/all_text" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/all_text"
                    android:textColor="@color/grey_black"
                    android:text="@string/step" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/color_perc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:id="@+id/color_walk"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/line"
                    android:background="@color/light_blue"
                    android:layout_marginRight="@dimen/margin_right"/>

                <View
                    android:id="@+id/color_aerobic"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/line"
                    android:layout_marginRight="@dimen/margin_right"
                    android:background="@color/blue" />

                <View
                    android:id="@+id/color_run"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/line"
                    android:background="@color/dark_green"
                    />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="@dimen/margin"
                android:weightSum="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_weight="0.33"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/walk_metric"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey_black"
                        android:textSize="@dimen/number_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_walk"
                        android:textColor="@color/light_grey"
                        android:text="@string/walk" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="0.33"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/aerobic_metric"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey_black"
                        android:textSize="@dimen/number_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_walk"
                        android:textColor="@color/light_grey"
                        android:text="@string/aerobic" />

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="0.33"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/run_metric"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/grey_black"
                        android:textSize="@dimen/number_size"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_walk"

                        android:textColor="@color/light_grey"
                        android:text="@string/run" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/layout_h"
                    android:background="@color/grey"
                    android:layout_marginRight="@dimen/margin_right"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/gone"
                        android:textColor="@color/blue_dark"
                        android:textSize="@dimen/gone"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_star" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>